Sun Sep  9 02:30:20 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (rb_mutex_lock): stop multiple threads use
	  pthread_cond_timedwait() concurrently. [Bug #6278] [ruby-core:44275]

Thu Aug 30 09:24:43 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/ftp.rb (URI::FTP#initialize): raise InvalidURIError if "//"
	  is not present [ruby-core:47344] [Bug #6945]

Tue Aug 28 00:40:14 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/webrick/test_cgi.rb (TestWEBrickCGI#start_cgi_server): there are
	  no guarantee of existance of RbConfig::CONFIG['LIBPATHENV'].
	  it only exists in Unix-like environments.

	* test/webrick/test_filehandler.rb
	  (WEBrick::TestFileHandler#test_script_disclosure): ditto.

Thu Aug 23 12:08:25 2012  Hiroshi Shirosaki  <h.shirosaki@gmail.com>

	* test/ruby/test_file_exhaustive.rb
	  (TestFileExhaustive#test_stat_special_file): add a test.
	  GetFileAttributesExW fails to get attributes of special files
	  such as pagefile.sys.

	* win32/win32.c (check_valid_dir): for performance, check the path
	  by FindFirstFileW only if the path contains "...".

	* win32/win32.c (winnt_stat): use GetFileAttributesExW instead of
	  FindFirstFileW since GetFileAttributesExW is faster.
	  Based on the patch by Dusan D. Majkic.
	  [ruby-core:47083] [Feature #6845]

Thu Aug 23 11:19:51 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread_pthread.c (ruby_init_stack): STACK_GROW_DIR_DETECTION is
	  necessary on platforms with unknown stack direction.  [Bug #6761]

Thu Aug 23 11:19:51 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* thread_pthread.c (get_stack): Linux is the only OS which includes
	  the size of guard page into the stack size.

Thu Aug 23 11:19:51 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.h (IS_STACK_DIR_UPPER): utility macro.

	* thread_pthread.c (get_stack): seems stack size does not include
	  guard size on Mac OS X.

	* thread_pthread.c (ruby_init_stack): adjust stack size for offset of
	  addr from the bottom.
