@@ -1,5 +1,5 @@
 #define RUBY_VERSION "1.9.3"
-#define RUBY_PATCHLEVEL 266
+#define RUBY_PATCHLEVEL 267
 
 #define RUBY_RELEASE_DATE "2012-09-09"
 #define RUBY_RELEASE_YEAR 2012
